# KernelFaRer

./: .gitignore
cplus-tests/: gemm-10.cc  skip-gemm-1.cc  skip-gemm-4.cc  skip-gemm-5.cc  trmm-0.cc  trmm-1.cc
kfcompare/: README.md
kfcompare/include/: KFCompare.h  KFCompare.inl
kfcompare/kernels/: naive_gemm.cc  skip_gemm_block_i2.cc  skip_gemm_block_i64.cc  skip_gemm_block_j2.cc  skip_gemm_block_j64.cc  skip_gemm_i2.cc  skip_gemm_i64.cc  skip_gemm_j2.cc  skip_gemm_j64.cc  skip_gemm_k2.cc  skip_gemm_k64.cc  sm_gemm_0.cc  sm_gemm_1.cc  sm_gemm_2.cc  trmm_0.cc  trmm_1.cc
kfcompare/src/: KFCompare.cpp
kfcompare/tests/: .gitignore  CMakeLists.txt  Makefile  test_gemm_0.cpp  test_naive_gemm.cpp  test_skip_gemm_0.cpp  test_skip_gemm_1.cpp  test_skip_gemm_2.cpp  test_skip_gemm_3.cpp  test_skip_gemm_4.cpp  test_skip_gemm_5.cpp  test_skip_gemm_block_i2.cpp  test_skip_gemm_block_i64.cpp  test_skip_gemm_block_j2.cpp  test_skip_gemm_block_j64.cpp  test_skip_gemm_i2.cpp  test_skip_gemm_i64.cpp  test_skip_gemm_j2.cpp  test_skip_gemm_j64.cpp  test_skip_gemm_k2.cpp  test_skip_gemm_k64.cpp  test_sm_gemm_0.cpp  test_sm_gemm_1.cpp  test_sm_gemm_2.cpp  test_trmm_0.cpp  test_trmm_1.cpp
passes/include/: KernelFaRer.h
passes/source/: Matcher.cpp  ReplacerPass.cpp
